ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: ingress-service
  namespace: ghost
spec:
  rules:
    - host: sudhanva.me
      http:
        paths:
          - path: /
            backend:
              service:
                name: sudhanva-v1-ghost
                port:
                  number: 80
            pathType: Prefix
  tls:
    - hosts:
        - sudhanva.me
      secretName: tls-secret
